V 1.0 for posts and interests page.

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -37,3 +37,8 @@
   height: 50px;
   border-radius: 25px;
 }
+
+.cursive-font {
+  font-family: "Dancing Script", cursive;
+  /* Add any additional styling for the cursive font here */
+}
