--- a/src/components/BlogPost.css
+++ b/src/components/BlogPost.css
@@ -2,7 +2,7 @@
   width: 85%;
   min-height: 100vh;
   margin: 0 auto; /* This centers the div horizontally */
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.6);
   padding: 32px;
 }
 
@@ -25,7 +25,7 @@
   font-weight: 400;
 }
 
-.post-time-of-publishing {
+.post-time-of-publishing, .post-type {
   font-size: 0.9rem;
   color: #777;
   text-align: right;
@@ -36,6 +36,18 @@
   color: #333;
   font-weight: 600;
   text-align: right;
+}
+
+.post-type {
+  text-align: center;
+}
+
+.post-image, .post-image-2 {
+  max-width: 100%;
+  max-height: 60vh; /* Adjust this value as needed */
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 768px) {
@@ -51,7 +63,7 @@
     font-size: 1.2rem;
   }
 
-  .post-time-of-publishing {
+  .post-time-of-publishing, .post-type {
     font-size: 0.8rem;
   }
 
@@ -74,7 +86,7 @@
     font-size: 1rem;
   }
 
-  .post-time-of-publishing {
+  .post-time-of-publishing, .post-type {
     font-size: 0.7rem;
   }
 
