outro text, fade-in/out animations, button color

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,24 @@ body {
   }
 }
 
+.page-enter {
+  opacity: 0;
+}
+
+.page-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in-out;
+}
+
+.page-exit {
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+}
+
 /* Adjust padding for smaller screens */
 @media screen and (max-width: 992px) {
   .main-content {
