--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -39,6 +39,5 @@
 }
 
 .cursive-font {
-  font-family: "Dancing Script", cursive;
-  /* Add any additional styling for the cursive font here */
+  font-family: 'Roboto', sans-serif;
 }
